--- a/public/index.html
+++ b/public/index.html
@@ -24,11 +24,19 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>254</title>
-    <!-- <title>BILITANONNE | African Artisanal Chocolate</title> 
+    <!-- <title>254</title> -->
+    <title>BILITANONNE | African Artisanal Chocolate</title> 
      <meta name="description" content="Bilitanonne creates African inspired artisanal handcrafted, chocolate bonbons and truffles, with high quality coverture chocolate.
 They are filled with innovatively made Ganache from African produce such as Plantain, Mango, Baobab, Tea and Coconut.">
-African: Current state in africa, Artisanal: My process, Chocolate: History-->
+<!-- African: Current state in africa, Artisanal: My process, Chocolate: History -->
+<style>
+  /* Critical CSS here */
+  body {
+    font-family: 'Teko', sans-serif;
+  }
+</style>
+<link rel="preload" href="https://fonts.googleapis.com/css2?family=Teko:wght@300..700&display=swap" as="style">
+<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Teko:wght@300..700&display=swap">
     
   </head>
   <body>
